Revert "DIAC-193 trying ti implement updating tabs on FTPA document edit - need to write unit tests"
This reverts commit a95a1fec991546d24f304481fe4d4645d372ae3e.